--- a/bbcProject/src/sql/reservation/reservation-query.properties
+++ b/bbcProject/src/sql/reservation/reservation-query.properties
@@ -1,17 +1,12 @@
 #reservation-query.properties
 getListCount=SELECT COUNT(*) FROM TB_RESERVATIONINFO WHERE RESERVATION_STATUS=1
-wholeList=SELECT MEMBER_NAME, RESERVATION_NO, CAR_NAME, CAR_NO, RENT_DATE, RETURN_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE RESERVATION_STATUS=1
 selectCarListRv=SELECT COUNT(*) CNT FROM TB_RESERVATIONINFO JOIN TB_CAR_INFO USING(CAR_NO) WHERE CAR_NO = ? AND RETURN_DATE >= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RENT_DATE <= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RESERVATION_STATUS  IN ('1','2')
 
+wholeList=SELECT MEMBER_NAME, RESERVATION_NO, CAR_NAME, CAR_NO, RENT_DATE, RETURN_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE RESERVATION_STATUS=?
 rentList=SELECT MEMBER_NO, MEMBER_NAME, RESERVATION_NO, CAR_NAME, CAR_NO, RENT_DATE, RETURN_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE RESERVATION_STATUS=? ORDER BY RENT_DATE DESC
 rentDetailMember=SELECT MEMBER_NAME, MEMBER_ZIPCODE, MEMBER_ADDRESS, RRN, PHONE, MEMBER_EMAIL FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) WHERE RESERVATION_NO=?
 rentDetailReserv=SELECT RESERVATION_NO, CAR_NO, CAR_NAME, RENT_DATE, RETURN_DATE, BRANCH_NAME FROM TB_RESERVATIONINFO JOIN TB_CAR_INFO USING (CAR_NO) JOIN TB_BRANCHMANAGEMENT USING(BRANCH_NO) WHERE RESERVATION_NO=?
 rentDetailPay=SELECT PAY_NO, PAY_METHOD, PAY_AMOUNT, PAY_DATE FROM TB_PAYMENT JOIN TB_RESERVATIONINFO USING(PAY_NO) WHERE RESERVATION_NO=?
 reservClientList=SELECT DISTINCT MEMBER_NO, MEMBER_ID, MEMBER_NAME, PHONE, MEMBER_EMAIL FROM TB_RESERVATIONINFO JOIN TB_USERINFO USING(MEMBER_NO)
 reservClientMember=SELECT MEMBER_NAME, MEMBER_ZIPCODE, MEMBER_ADDRESS, RRN, PHONE, MEMBER_EMAIL FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) WHERE MEMBER_NO=?
-reservClientDetailPay=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT RESERVATION_NO, RENT_DATE, RETURN_DATE, CAR_NAME, CAR_NO, PAY_AMOUNT, PAY_DATE, PAY_METHOD, REFUND_STATEMENT, REFUND_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_PAYMENT USING(PAY_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE MEMBER_NO=? ORDER BY RESERVATION_NO ASC) X)
-
-
-### ajax tab menu sql
-wholeList=SELECT MEMBER_NAME, RESERVATION_NO, CAR_NAME, CAR_NO, RENT_DATE, RETURN_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE RESERVATION_STATUS=?
-
+reservClientDetailPay=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT RESERVATION_NO, RENT_DATE, RETURN_DATE, CAR_NO, CAR_NAME, PAY_AMOUNT, PAY_DATE, PAY_METHOD, REFUND_STATEMENT, REFUND_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_PAYMENT USING(PAY_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE MEMBER_NO=? ORDER BY RESERVATION_NO ASC) X)
