민기 - 차량등록 기능 및 sql구문
차량등록 기능 업로드

--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -4,3 +4,4 @@ selectCarTypeRv=SELECT CAR_TYPE_NO, I.CAR_NO, I.CAR_TYPE_NAME, I.CAR_MODIFY_NAME
 
 
 #mingi area
+adminAddCar=INSERT INTO TB_CAR_INFO VALUES(SEQ_CAR_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, DEFAULT, DEFAULT, ?, ?, NULL)
