민진 보유차량 수정
myCar.jsp 수정 중 커밋

--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -5,3 +5,6 @@ selectCarTypeRv=SELECT CAR_TYPE_NO, I.CAR_NO, I.CAR_TYPE_NAME, I.CAR_MODIFY_NAME
 
 #mingi area
 adminAddCar=INSERT INTO TB_CAR_INFO VALUES(SEQ_CAR_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, DEFAULT, DEFAULT, ?, ?, NULL)
+
+#minjin
+carList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO=? ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
