민진 메인 페이지 공지사항 수정
메인화면 공지사항 리스트, 페이징ㄱ ㅣ능 추가, 메인페이지 공지사항 객체 추가

--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -1,9 +1,11 @@
 #notice-query.properties
 
 #==============================branch===============================
-getNoticeCount=SELECT COUNT(*) FROM TB_NOTICE
+getNoticeCount=SELECT COUNT(*) FROM TB_NOTICE WHERE NOTICE_FIELD IS NULL
+getMainNoticeCount=SELECT COUNT(*) FROM TB_NOTICE WHERE NOTICE_FIELD=1
 increaseCount=UPDATE TB_NOTICE SET NOTICE_READCNT=NOTICE_READCNT+1 WHERE NOTICE_NO=?
-noticeList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME, NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? ORDER BY NOTICE_DATE DESC) N) WHERE RNUM BETWEEN ? AND ?
+noticeList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME, NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? AND NOTICE_FIELD IS NULL ORDER BY NOTICE_DATE DESC) N) WHERE RNUM BETWEEN ? AND ?
+mainNoticeList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME, NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? AND NOTICE_FIELD=1 ORDER BY NOTICE_DATE DESC) N) WHERE RNUM BETWEEN ? AND ?
 selectNotice=SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_MODIFY_DATE, NOTICE_READCNT, MEMBER_NO, NOTICE_IMPORT, NOTICE_FIELD, BRANCH_NO, (SELECT MAX(P.NOTICE_NO) FROM TB_NOTICE P WHERE P.NOTICE_NO < ?) PREV, (SELECT MIN(P.NOTICE_NO) FROM TB_NOTICE P WHERE P.NOTICE_NO > ?) NEXT FROM TB_NOTICE WHERE NOTICE_NO=?
 selectAttachment=SELECT FILE_NO, FILE_NAME, FRENAME FROM TB_ATTACHMENT WHERE NOTICE_NO=? ORDER BY FILE_NO ASC
 insertNotice=INSERT INTO TB_NOTICE VALUES(SEQ_NOTICE_NO.NEXTVAL, ?, ?, SYSDATE, DEFAULT, DEFAULT, ?, ?, DEFAULT, DEFAULT)
