--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -7,4 +7,7 @@ selectCarTypeRv=SELECT CAR_TYPE_NO, I.CAR_NO, I.CAR_TYPE_NAME, I.CAR_MODIFY_NAME
 adminAddCar=INSERT INTO TB_CAR_INFO VALUES(SEQ_CAR_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, DEFAULT, DEFAULT, ?, ?, NULL)
 
 #minjin
+getCarListCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO=?
+getCarEnrollCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO IS NULL
 carList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO=? ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
+carEnroll=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO IS NULL ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
