민기 - 금액정보 업데이트 기능 추가
파일수 5개 carType 패키지 내용추가, sql문 내용 추가

--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -8,9 +8,9 @@ adminAddCar=INSERT INTO TB_CAR_INFO VALUES(SEQ_CAR_NO.NEXTVAL, ?, ?, ?, ?, ?, ?,
 amdinPriceSelectList1=SELECT * FROM TB_CAR_TYPE WHERE CAR_TYPE_NO=1
 amdinPriceSelectList2=SELECT * FROM TB_CAR_TYPE WHERE CAR_TYPE_NO=4
 amdinPriceSelectList3=SELECT * FROM TB_CAR_TYPE WHERE CAR_TYPE_NO=7
-adminCarPrice1=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
-adminCarPrice2=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
-adminCarPrice3=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+adminCarPrice1=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_6T=?, OVER_9T=?, OVER_12T=?, MEMBER_CAR=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminCarPrice2=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_6T=?, OVER_9T=?, OVER_12T=?, MEMBER_CAR=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminCarPrice3=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_6T=?, OVER_9T=?, OVER_12T=?, MEMBER_CAR=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
 
 #minjin
 getCarListCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO=?
