민진 이벤트 수정기능 완성
이벤트 수정 기능,,완성
남은것 : 동적 페이징 기능, 차 정보 모달에 주기

--- a/bbcProject/src/sql/event/event-query.properties
+++ b/bbcProject/src/sql/event/event-query.properties
@@ -6,3 +6,4 @@ increaseCount=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_VC=EVENT_MANAGEMENT_VC+1 WH
 deleteEvent=DELETE FROM TB_EVENT_M WHERE EVENT_MANAGEMENT_NO=?
 insertEvent=INSERT INTO TB_EVENT_M VALUES(SEQ_EVENT_MANAGEMENT_NO.NEXTVAL, ?, SYSDATE, ?, ?, DEFAULT, ?, ?, ?)
 selectListBranch=SELECT * FROM VW_EVENTLIST WHERE BRANCH_NO = ?
+updateEvent=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_TITLE=?, EVENT_MANAGEMENT_DATE=SYSDATE, EVENT_MANAGEMENT_START=?, EVENT_MANAGEMENT_END=?, DISCOUNT_RATE=?, EVENT_MANAGEMENT_CONTENT=? WHERE MEMBER_NO=? AND EVENT_MANAGEMENT_NO=?
