--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -16,5 +16,6 @@ adminCarPrice3=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_
 getCarListCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO=?
 getCarEnrollCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO IS NULL
 carList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO=? ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
-carEnroll=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO IS NULL ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
+carEnrollList=SELECT * FROM (SELECT ROWNUM RNUM, N.* FROM (SELECT CAR_NO, CAR_NAME, CAR_NUM, CAR_FUEL, CAR_COLOR, CAR_LUNCH_YEAR, CAR_OPTION, CAR_RIDE_PEOPLE, CAR_MODIFY_NAME, CAR_TYPE_NAME FROM TB_CAR_INFO JOIN TB_CAR_TYPE USING(CAR_TYPE_NO) WHERE BRANCH_NO IS NULL ORDER BY CAR_LUNCH_YEAR DESC) N) WHERE RNUM BETWEEN ? AND ?
 deleteCar=DELETE FROM TB_CAR_INFO WHERE CAR_NO=?
+carEnroll=UPDATE TB_CAR_INFO SET BRANCH_NO=? WHERE CAR_NO=?
