--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -10,7 +10,7 @@ selectNotice=SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE
 selectAttachment=SELECT FILE_NO, FILE_NAME, FRENAME FROM TB_ATTACHMENT WHERE NOTICE_NO=? ORDER BY FILE_NO ASC
 insertNotice=INSERT INTO TB_NOTICE VALUES(SEQ_NOTICE_NO.NEXTVAL, ?, ?, SYSDATE, DEFAULT, DEFAULT, ?, ?, DEFAULT, DEFAULT)
 insertAttachment=INSERT INTO TB_ATTACHMENT VALUES(SEQ_FID.NEXTVAL, ?, ?, SEQ_NOTICE_NO.CURRVAL, ?)
-updateNotice=UPDATE TB_NOTICE SET NOTICE_TITLE=?, NOTICE_CONTENT=?, NOTICE_DATE=SYSDATE, NOTICE_IMPORT=? WHERE NOTICE_NO=?
+updateNotice=UPDATE TB_NOTICE SET NOTICE_TITLE=?, NOTICE_CONTENT=?, NOTICE_DATE=SYSDATE, NOTICE_IMPORT=? WHERE NOTICE_NO=? AND MEMBER_NO=?
 deleteNotice=DELETE FROM TB_NOTICE WHERE NOTICE_NO=?
 selectByBranch=SELECT * FROM(SELECT NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE NOTICE_IMPORT=1 AND BRANCH_NO=? ORDER BY NOTICE_DATE DESC) WHERE ROWNUM=1
 
