--- a/bbcProject/src/sql/coupon/coupon-query.properties
+++ b/bbcProject/src/sql/coupon/coupon-query.properties
@@ -4,3 +4,4 @@ adminSelectList=SELECT COUPON_NO, COUPON_NAME, COUPON_DC, COUPON_GIVE, COUPON_CR
 adminCouponDelete=DELETE FROM TB_COUPON WHERE COUPON_NO=?
 adminCouponAdd=INSERT INTO TB_COUPON VALUES(SEQ_COUPON_NO.NEXTVAL, ?, NULL, NULL, ?, NULL, ?, ?, SYSDATE)
 adminUpdateCoupon=UPDATE TB_COUPON SET COUPON_NAME=?, COUPON_GIVE=?, COUPON_DC=? WHERE COUPON_NO=?
+selectListByCoupon=SELECT COUPON_NO, COUPON_NAME, COUPON_DC FROM TB_COUPON WHERE COUPON_USE='Y' AND COUPON_NO=?
