마이페이지(요한)
마이페이지 기능 운전면허 등록 빼고 다 넣음

--- a/bbcProject/src/sql/coupon/coupon-query.properties
+++ b/bbcProject/src/sql/coupon/coupon-query.properties
@@ -4,3 +4,8 @@ adminSelectList=SELECT COUPON_NO, COUPON_NAME, COUPON_DC, COUPON_GIVE, COUPON_CR
 adminCouponDelete=DELETE FROM TB_COUPON WHERE COUPON_NO=?
 adminCouponAdd=INSERT INTO TB_COUPON VALUES(SEQ_COUPON_NO.NEXTVAL, ?, NULL, NULL, ?, NULL, ?, ?, SYSDATE)
 adminUpdateCoupon=UPDATE TB_COUPON SET COUPON_NAME=?, COUPON_GIVE=?, COUPON_DC=? WHERE COUPON_NO=?
+
+
+
+#mycoupon-query.properties(john)
+viewMyCoupon=SELECT COUPON_USE, COUPON_NAME, COUPON_POST, COUPON_EXP, COUPON_TYPE, COUPON_CONDITION,COUPON_DC FROM TB_COUPON C JOIN TB_MY_COUPON M USING(COUPON_NO) WHERE M.MEMBER_NO = ?
