--- a/bbcProject/src/sql/userInfo/userInfo-query.properties
+++ b/bbcProject/src/sql/userInfo/userInfo-query.properties
@@ -12,3 +12,10 @@ loginUserInfo= SELECT * FROM TB_USERINFO WHERE MEMBER_ID = ? AND MEMBER_PWD = ? 
 insertUser= INSERT INTO TB_USERINFO VALUES(SEQ_MEMBER_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, ?, ?,DEFAULT,DEFAULT,DEFAULT,DEFAULT)
 viewUserInfo = SELECT MEMBER_ID, MEMBER_NAME, MEMBER_EMAIL,PHONE,MEMBER_ZIPCODE FROM  TB_USERINFO WHERE MEMBER_NO = ?
 selectUser=SELECT * FROM TB_USERINFO WHERE MEMBER_NO = ? AND SECESSION = 1
+updateUser=UPDATE TB_USERINFO SET MEMBER_ID = ?, MEMBER_PWD = ?, MEMBER_NAME = ?, MEMBER_ZIPCODE = ?, MEMBER_ADDRESS = ?, PHONE = ?, MEMBER_EMAIL = ?, GENDER = ? WHERE MEMBER_NO = ?
+deleteUser=UPDATE TB_USERINFO SET SECESSION = 2 WHERE MEMBER_ID = ?
+findIdByEmail=SELECT MEMBER_ID FROM TB_USERINFO WHERE MEMBER_NAME = ? AND MEMBER_EMAIL= ?
+findIdByPhone= SELECT MEMBER_ID FROM TB_USERINFO WHERE MEMBER_NAME = ? AND PHONE = ?
+findMyPw = SELECT MEMBER_ID FROM TB_USERINFO WHERE MEMBER_NAME = ? AND MEMBER_EMAIL = ? AND PHONE = ?
+updatePw = UPDATE TB_USERINFO SET MEMBER_PWD = ? WHERE MEMBER_ID = ?
+idCheck=SELECT COUNT(*) FROM TB_USERINFO WHERE MEMBER_ID=?
