민기 - 금액정보(차량/ 보험) 업데이트 기능 추가
파일수 10, sql쿼리문, crrType 패키지 내용 추가

--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -12,6 +12,27 @@ adminCarPrice1=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_
 adminCarPrice2=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_6T=?, OVER_9T=?, OVER_12T=?, MEMBER_CAR=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
 adminCarPrice3=UPDATE TB_CAR_TYPE SET RENT_1D=?, RENT_1D_6D=?, RENT_7DP=?, OVER_6T=?, OVER_9T=?, OVER_12T=?, MEMBER_CAR=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
 
+adminInsuranceUpdate1=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminInsuranceUpdate2=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminInsuranceUpdate3=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+
+adminInsuranceUpdate4=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminInsuranceUpdate5=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminInsuranceUpdate6=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE1=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+adminStopUpdate1=UPDATE TB_CAR_TYPE SET RECESS_PRICE=? WHERE CAR_TYPE_NO BETWEEN 1 AND 5
+adminStopUpdate2=UPDATE TB_CAR_TYPE SET RECESS_PRICE=? WHERE CAR_TYPE_NO BETWEEN 6 AND 9
+adminInsuranceUpdate11=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminInsuranceUpdate12=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminInsuranceUpdate13=UPDATE TB_CAR_TYPE SET RENT_INSU_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+adminInsuranceUpdate14=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminInsuranceUpdate15=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminInsuranceUpdate16=UPDATE TB_CAR_TYPE SET ACCIDENT_PRICE_TYPE2=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+adminInsuranceUpdate21=UPDATE TB_CAR_TYPE SET ACCIDENT_EXEMPTION=? WHERE CAR_TYPE_NO BETWEEN 1 AND 3
+adminInsuranceUpdate22=UPDATE TB_CAR_TYPE SET ACCIDENT_EXEMPTION=? WHERE CAR_TYPE_NO BETWEEN 4 AND 6
+adminInsuranceUpdate23=UPDATE TB_CAR_TYPE SET ACCIDENT_EXEMPTION=? WHERE CAR_TYPE_NO BETWEEN 7 AND 9
+
+
+
 #minjin
 getCarListCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO=?
 getCarEnrollCount=SELECT COUNT(*) FROM TB_CAR_INFO WHERE BRANCH_NO IS NULL
