--- a/bbcProject/src/sql/event/event-query.properties
+++ b/bbcProject/src/sql/event/event-query.properties
@@ -7,3 +7,4 @@ deleteEvent=DELETE FROM TB_EVENT_M WHERE EVENT_MANAGEMENT_NO=?
 insertEvent=INSERT INTO TB_EVENT_M VALUES(SEQ_EVENT_MANAGEMENT_NO.NEXTVAL, ?, SYSDATE, ?, ?, DEFAULT, ?, ?, ?)
 selectListBranch=SELECT * FROM VW_EVENTLIST WHERE BRANCH_NO = ?
 updateEvent=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_TITLE=?, EVENT_MANAGEMENT_DATE=SYSDATE, EVENT_MANAGEMENT_START=?, EVENT_MANAGEMENT_END=?, DISCOUNT_RATE=?, EVENT_MANAGEMENT_CONTENT=? WHERE MEMBER_NO=? AND EVENT_MANAGEMENT_NO=?
+selectListRv=SELECT * FROM(SELECT EVENT_MANAGEMENT_TITLE, EVENT_MANAGEMENT_START, EVENT_MANAGEMENT_END, EVENT_MANAGEMENT_CONTENT FROM TB_EVENT_M WHERE SYSDATE BETWEEN TO_DATE(EVENT_MANAGEMENT_START) AND TO_DATE(EVENT_MANAGEMENT_END) ORDER BY DISCOUNT_RATE DESC) WHERE ROWNUM <= 4
