--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -29,3 +29,5 @@ UserSelectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT NOTICE_NO, NO
 UserGetListCount=SELECT COUNT(*) FROM TB_NOTICE WHERE NOTICE_FIELD=1
 UserSelectNotice=SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD FROM TB_NOTICE WHERE NOTICE_NO=?
 UserIncreaseCount=UPDATE TB_NOTICE SET NOTICE_READCNT=NOTICE_READCNT+1 WHERE NOTICE_NO=?
+
+selectByRv=SELECT * FROM(SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE FROM TB_NOTICE ORDER BY NOTICE_DATE DESC) WHERE ROWNUM <= 4
