면허증등록,나의지점(요한)
면허증등록이랑 나의지점 수정

--- a/bbcProject/src/sql/driverlicense/driverlicense-query.properties
+++ b/bbcProject/src/sql/driverlicense/driverlicense-query.properties
@@ -1,1 +1,7 @@
 selectByMemberId=SELECT * FROM TB_DRIVER_LICENSE WHERE MEMBER_NO=?
+
+
+#yohan driverlicense
+insertDriverLicense=INSERT INTO TB_DRIVER_LICENSE VALUES(SEQ_DRIVER_LICENSE_NO.NEXTVAL,?,?,?,?,?,?,?)
+viewMyDriverLicense=SELECT * FROM TB_DRIVER_LICENSE WHERE MEMBER_NO=?
+deleteMyDriverLicense=DELETE FROM TB_DRIVER_LICENSE WHERE MEMBER_NO=?
