--- a/bbcProject/src/sql/faq/faq-query.properties
+++ b/bbcProject/src/sql/faq/faq-query.properties
@@ -1,5 +1,5 @@
 #faq-query.properties(mingi)
 selectFaq=SELECT * FROM TB_FAQ ORDER BY FAQ_NO DESC
-insertFaq=INSERT INTO TB_FAQ VALUES(FAQ_NO_SEQ.NEXTVAL, ?, ?, ?)
+insertFaq=INSERT INTO TB_FAQ VALUES(SEQ_FAQ_NO.NEXTVAL, ?, ?, ?)
 updateFaq=UPDATE TB_FAQ SET FAQ_TITLE=?, FAQ_CONTENT=? WHERE FAQ_NO=?
 deleteFaq=DELETE FROM TB_FAQ WHERE FAQ_NO=?
