민진 기능 수정
안되는거 수정

--- a/bbcProject/src/sql/reservation/reservation-query.properties
+++ b/bbcProject/src/sql/reservation/reservation-query.properties
@@ -1,5 +1,5 @@
 #reservation-query.properties
-getListCount=SELECT COUNT(*) FROM TB_RESERVATIONINFO WHERE RESERVATION_STATUS=1
+getListCount=SELECT COUNT(*) FROM TB_RESERVATIONINFO WHERE RESERVATION_STATUS='1'
 selectCarListRv=SELECT COUNT(*) CNT FROM TB_RESERVATIONINFO JOIN TB_CAR_INFO USING(CAR_NO) WHERE CAR_NO = ? AND RETURN_DATE >= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RENT_DATE <= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RESERVATION_STATUS  IN ('1','2')
 insertReservation=INSERT INTO TB_RESERVATIONINFO VALUES (SEQ_RESERVATION_NO.NEXTVAL,?,?,?,?,?,?,?,?,?,?,?,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT,DEFAULT,?,?,?,?,?)
 
@@ -10,7 +10,7 @@ rentDetailReserv=SELECT RESERVATION_NO, CAR_NO, CAR_NAME, RENT_DATE, RETURN_DATE
 rentDetailPay=SELECT PAY_NO, PAY_METHOD, PAY_AMOUNT, PAY_DATE FROM TB_PAYMENT JOIN TB_RESERVATIONINFO USING(PAY_NO) WHERE RESERVATION_NO=?
 reservClientList=SELECT DISTINCT MEMBER_NO, MEMBER_ID, MEMBER_NAME, PHONE, MEMBER_EMAIL FROM TB_RESERVATIONINFO JOIN TB_USERINFO USING(MEMBER_NO)
 reservClientMember=SELECT MEMBER_NO, MEMBER_NAME, MEMBER_ZIPCODE, MEMBER_ADDRESS, RRN, PHONE, MEMBER_EMAIL FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) WHERE MEMBER_NO=?
-reservClientDetailPay=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT RESERVATION_NO, RENT_DATE, RETURN_DATE, CAR_NO, CAR_NAME, PAY_AMOUNT, PAY_DATE, PAY_METHOD, REFUND_STATEMENT, REFUND_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_PAYMENT USING(PAY_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE MEMBER_NO=? ORDER BY RESERVATION_NO ASC) X)
+reservClientDetailPay=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT RESERVATION_NO, RENT_DATE, RETURN_DATE, CAR_NO, CAR_NAME, PAY_AMOUNT, PAY_DATE, PAY_METHOD, REFUND_STATEMENT, REFUND_DATE FROM TB_RESERVATIONINFO JOIN TB_PAYMENT USING(PAY_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE TB_RESERVATIONINFO.MEMBER_NO=? ORDER BY RESERVATION_NO ASC) X)
 
 
 #history-query.properties
