--- a/bbcProject/src/sql/driver/driver.properties
+++ b/bbcProject/src/sql/driver/driver.properties
@@ -1,5 +1,5 @@
 #driver.properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:xe
-username=bbcproject
-password=bbcproject
+username=bbc
+password=bbc
