민진 이것저것 수정
수정 커밋

--- a/bbcProject/src/sql/event/event-query.properties
+++ b/bbcProject/src/sql/event/event-query.properties
@@ -1,10 +1,10 @@
 #event-query.properties
 getEventCount=SELECT COUNT(*) FROM TB_EVENT_M
-eventList=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT EVENT_MANAGEMENT_NO, EVENT_MANAGEMENT_TITLE, MEMBER_NAME, EVENT_MANAGEMENT_START, EVENT_MANAGEMENT_END, EVENT_MANAGEMENT_VC FROM TB_EVENT_M E JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? ORDER BY EVENT_MANAGEMENT_START DESC) X) WHERE RNUM BETWEEN ? AND ?
+eventList=SELECT * FROM (SELECT ROWNUM RNUM, X.* FROM (SELECT EVENT_MANAGEMENT_NO, EVENT_MANAGEMENT_TITLE, MEMBER_NAME, EVENT_MANAGEMENT_START, EVENT_MANAGEMENT_END, EVENT_MANAGEMENT_VC FROM TB_EVENT_M E JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=21 ORDER BY EVENT_MANAGEMENT_START DESC) X) WHERE RNUM BETWEEN ? AND ?
 selectEvent=SELECT EVENT_MANAGEMENT_NO, EVENT_MANAGEMENT_TITLE, EVENT_MANAGEMENT_DATE, EVENT_MANAGEMENT_START, EVENT_MANAGEMENT_END, EVENT_MANAGEMENT_VC, DISCOUNT_RATE, EVENT_MANAGEMENT_CONTENT, MEMBER_NO, (SELECT MAX(P.EVENT_MANAGEMENT_NO) FROM TB_EVENT_M P WHERE P.EVENT_MANAGEMENT_NO < ?) PREV, (SELECT MIN(P.EVENT_MANAGEMENT_NO) FROM TB_EVENT_M P WHERE P.EVENT_MANAGEMENT_NO > ?) NEXT FROM TB_EVENT_M WHERE EVENT_MANAGEMENT_NO=?
 increaseCount=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_VC=EVENT_MANAGEMENT_VC+1 WHERE EVENT_MANAGEMENT_NO=?
 deleteEvent=DELETE FROM TB_EVENT_M WHERE EVENT_MANAGEMENT_NO=?
-insertEvent=INSERT INTO TB_EVENT_M VALUES(SEQ_EVENT_NO.NEXTVAL, ?, SYSDATE, ?, ?, DEFAULT, ?, ?, ?)
+insertEvent=INSERT INTO TB_EVENT_M VALUES(SEQ_EVENT_NO.NEXTVAL, ?, SYSDATE, ?, ?, DEFAULT, ?, ?, 21)
 selectListBranch=SELECT * FROM VW_EVENTLIST WHERE BRANCH_NO = ?
-updateEvent=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_TITLE=?, EVENT_MANAGEMENT_DATE=SYSDATE, EVENT_MANAGEMENT_START=?, EVENT_MANAGEMENT_END=?, DISCOUNT_RATE=?, EVENT_MANAGEMENT_CONTENT=? WHERE MEMBER_NO=? AND EVENT_MANAGEMENT_NO=?
+updateEvent=UPDATE TB_EVENT_M SET EVENT_MANAGEMENT_TITLE=?, EVENT_MANAGEMENT_DATE=SYSDATE, EVENT_MANAGEMENT_START=?, EVENT_MANAGEMENT_END=?, DISCOUNT_RATE=?, EVENT_MANAGEMENT_CONTENT=? WHERE MEMBER_NO=21 AND EVENT_MANAGEMENT_NO=?
 selectListRv=SELECT * FROM(SELECT EVENT_MANAGEMENT_TITLE, EVENT_MANAGEMENT_START, EVENT_MANAGEMENT_END, EVENT_MANAGEMENT_CONTENT FROM TB_EVENT_M WHERE SYSDATE BETWEEN TO_DATE(EVENT_MANAGEMENT_START) AND TO_DATE(EVENT_MANAGEMENT_END) ORDER BY DISCOUNT_RATE DESC) WHERE ROWNUM <= 4
