민기 - 통합관리자 버그 수정
파일 17개 수정

--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -19,7 +19,7 @@ getListCount=SELECT COUNT(*) FROM TB_NOTICE
 selectList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM(SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME, NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) ORDER BY NOTICE_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 adminUserNotice=INSERT INTO TB_NOTICE VALUES(SEQ_NOTICE_NO.NEXTVAL, ?, ?, SYSDATE, NULL, DEFAULT, ?, ?, ?)
 adminUserAttachment=INSERT INTO TB_ATTACHMENT VALUES(SEQ_FILE_NO.NEXTVAL, ?, ?, ?, ?)
-adminUserNoticeDetail=SELECT NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD, NOTICE_IMPORT, MEMBER_NAME, FRENAME FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) JOIN TB_ATTACHMENT USING(NOTICE_NO) WHERE NOTICE_NO=?
+adminUserNoticeDetail=SELECT NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD, NOTICE_IMPORT, MEMBER_NAME, FRENAME FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) LEFT JOIN TB_ATTACHMENT USING(NOTICE_NO) WHERE NOTICE_NO=?
 adminUserNoticeUpdate=UPDATE TB_NOTICE SET NOTICE_TITLE=?, NOTICE_CONTENT=?, NOTICE_DATE=SYSDATE, NOTICE_FIELD=?, NOTICE_IMPORT=? WHERE NOTICE_NO=?
 adminUserNoticeDelete=DELETE FROM TB_NOTICE WHERE NOTICE_NO=?
 
