--- a/bbcProject/src/sql/coupon/coupon-query.properties
+++ b/bbcProject/src/sql/coupon/coupon-query.properties
@@ -1,8 +1,8 @@
 #coupon-query.properties(mingi)
 getListCount=SELECT COUNT(*) FROM TB_COUPON
-adminSelectList=SELECT COUPON_NO, COUPON_NAME, COUPON_DC, COUPON_GIVE, COUPON_CREATE_DATE, MEMBER_ID FROM TB_COUPON JOIN TB_USERINFO USING(MEMBER_NO) ORDER BY COUPON_NO DESC
+adminSelectList=SELECT COUPON_NO, COUPON_NAME, COUPON_DC, COUPON_GIVE, COUPON_CREATE, MEMBER_ID FROM TB_COUPON JOIN TB_USERINFO USING(MEMBER_NO) ORDER BY COUPON_NO DESC
 adminCouponDelete=DELETE FROM TB_COUPON WHERE COUPON_NO=?
-adminCouponAdd=INSERT INTO TB_COUPON VALUES(SEQ_COUPON_NO.NEXTVAL, ?, NULL, NULL, ?, NULL, ?, ?, SYSDATE)
+adminCouponAdd=INSERT INTO TB_COUPON VALUES(SEQ_COUPON_NO.NEXTVAL, ?, ?, ?, SYSDATE, NULL, NULL, NULL, ?)
 adminUpdateCoupon=UPDATE TB_COUPON SET COUPON_NAME=?, COUPON_GIVE=?, COUPON_DC=? WHERE COUPON_NO=?
 
 #mycoupon-query.properties(john)
