마이페이지 기능복구(요한)
마이페이지 기능 수정

--- a/bbcProject/src/sql/coupon/coupon-query.properties
+++ b/bbcProject/src/sql/coupon/coupon-query.properties
@@ -6,7 +6,7 @@ adminCouponAdd=INSERT INTO TB_COUPON VALUES(SEQ_COUPON_NO.NEXTVAL, ?, ?, ?, SYSD
 adminUpdateCoupon=UPDATE TB_COUPON SET COUPON_NAME=?, COUPON_GIVE=?, COUPON_DC=? WHERE COUPON_NO=?
 
 #mycoupon-query.properties(john)
-viewMyCoupon=SELECT COUPON_USE, COUPON_NAME, COUPON_POST, COUPON_EXP, COUPON_TYPE, COUPON_CONDITION,COUPON_DC FROM TB_COUPON C JOIN TB_MY_COUPON M USING(COUPON_NO) WHERE M.MEMBER_NO = ?
+viewMyCoupon=SELECT COUPON_USE, COUPON_NAME, COUPON_ENROLL_DATE, COUPON_END_DATE FROM TB_COUPON C JOIN TB_MY_COUPON M USING(COUPON_NO) WHERE M.MEMBER_NO = ?
 #coupon(mikyung) 
-selectListByCoupon=SELECT COUPON_NO, COUPON_NAME, COUPON_DC FROM TB_COUPON WHERE COUPON_USE='Y' AND COUPON_NO=?
+selectListByCoupon=COUPON_NAME,SELECT COUPON_NO,COUPON_DC FROM TB_COUPON WHERE COUPON_USE='Y' AND COUPON_NO=?
 
