--- a/bbcProject/src/sql/mycoupon/mycoupon-query.properties
+++ b/bbcProject/src/sql/mycoupon/mycoupon-query.properties
@@ -1,1 +1,1 @@
-selectByMemberNo=SELECT COUPON_NO FROM TB_MY_COUPON  WHERE COUPON_USAGE='N' AND MEMBER_NO=?
+selectByMemberNo=SELECT COUPON_NO FROM TB_MY_COUPON  WHERE COUPON_USE='Y' AND MEMBER_NO=?
