미경-최종수정본
미경-최종수정본

--- a/bbcProject/src/sql/coupon/coupon-query.properties
+++ b/bbcProject/src/sql/coupon/coupon-query.properties
@@ -9,4 +9,4 @@ adminUpdateCoupon=UPDATE TB_COUPON SET COUPON_NAME=?, COUPON_GIVE=?, COUPON_DC=?
 viewMyCoupon=SELECT COUPON_USE, COUPON_NAME, COUPON_POST, COUPON_EXP, COUPON_TYPE, COUPON_CONDITION,COUPON_DC FROM TB_COUPON C JOIN TB_MY_COUPON M USING(COUPON_NO) WHERE M.MEMBER_NO = ?
 #coupon(mikyung) 
 selectListByCoupon=SELECT COUPON_NO, COUPON_NAME, COUPON_DC FROM TB_COUPON WHERE COUPON_USE='Y' AND COUPON_NO=?
-
+selectByMemberNo=SELECT COUPON_NO FROM TB_MY_COUPON  WHERE COUPON_USAGE='N' AND MEMBER_NO=?
