--- a/bbcProject/src/sql/cartype/cartype-query.properties
+++ b/bbcProject/src/sql/cartype/cartype-query.properties
@@ -1,7 +1,7 @@
 #cartype-query.properties
 selectListRv=SELECT CAR_TYPE_NO, CAR_TYPE_NAME, RENT_1D, RENT_1D_6D, RENT_7DP, MEMBER_CAR FROM TB_CAR_TYPE
-selectCarTypeRv=SELECT CAR_TYPE_NO, I.CAR_NO, T.CAR_TYPE_NAME, I.CAR_MODIFY_NAME, I.CAR_FUEL, I.CAR_RIDE_PEOPLE, I.CAR_OPTION, T.RENT_1D, T.RENT_1D_6D, T.RENT_7DP,T.MEMBER_CAR,T.RENT_INSU_TYPE1,T.RENT_INSU_TYPE2,T.ACCIDENT_PRICE_TYPE1, T.ACCIDENT_PRICE_TYPE2,T.ACCIDENT_EXEMPTION FROM TB_CAR_INFO I JOIN TB_CAR_TYPE T USING(CAR_TYPE_NO) WHERE CAR_TYPE_NO = ? AND BRANCH_NO = ?
-selectCarTypeAllRv=SELECT CAR_TYPE_NO, I.CAR_NO, T.CAR_TYPE_NAME, I.CAR_MODIFY_NAME, I.CAR_FUEL, I.CAR_RIDE_PEOPLE, I.CAR_OPTION, T.RENT_1D, T.RENT_1D_6D, T.RENT_7DP,T.MEMBER_CAR,T.RENT_INSU_TYPE1,T.RENT_INSU_TYPE2,T.ACCIDENT_PRICE_TYPE1,T.ACCIDENT_PRICE_TYPE2,T.ACCIDENT_EXEMPTION FROM TB_CAR_INFO I JOIN TB_CAR_TYPE T USING(CAR_TYPE_NO) WHERE BRANCH_NO = ?
+selectCarTypeRv=SELECT CAR_TYPE_NO, I.CAR_NO, I.CAR_NAME, T.CAR_TYPE_NAME, I.CAR_MODIFY_NAME, I.CAR_FUEL, I.CAR_RIDE_PEOPLE,  I.CAR_OPTION, T.RENT_1D, T.RENT_1D_6D, T.RENT_7DP, T.MEMBER_CAR, T.RENT_INSU_TYPE1, T.RENT_INSU_TYPE2, T.ACCIDENT_PRICE_TYPE1, T.ACCIDENT_PRICE_TYPE2, T.ACCIDENT_EXEMPTION FROM TB_CAR_INFO I JOIN TB_CAR_TYPE T USING(CAR_TYPE_NO) WHERE CAR_TYPE_NO =? AND BRANCH_NO = ?
+selectCarTypeAllRv=SELECT CAR_TYPE_NO, I.CAR_NO, I.CAR_NAME, T.CAR_TYPE_NAME, I.CAR_MODIFY_NAME, I.CAR_FUEL, I.CAR_RIDE_PEOPLE,  I.CAR_OPTION, T.RENT_1D, T.RENT_1D_6D, T.RENT_7DP, T.MEMBER_CAR, T.RENT_INSU_TYPE1, T.RENT_INSU_TYPE2, T.ACCIDENT_PRICE_TYPE1, T.ACCIDENT_PRICE_TYPE2, T.ACCIDENT_EXEMPTION FROM TB_CAR_INFO I JOIN TB_CAR_TYPE T USING(CAR_TYPE_NO) WHERE BRANCH_NO = ?
 
 #mingi area
 adminAddCar=INSERT INTO TB_CAR_INFO VALUES(SEQ_CAR_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, DEFAULT, DEFAULT, ?, ?, NULL)
