--- a/bbcProject/src/sql/reservation/reservation-query.properties
+++ b/bbcProject/src/sql/reservation/reservation-query.properties
@@ -1,6 +1,6 @@
 #reservation-query.properties
 getListCount=SELECT COUNT(*) FROM TB_RESERVATIONINFO WHERE RESERVATION_STATUS='1'
-selectCarListRv=SELECT COUNT(*) CNT FROM TB_RESERVATIONINFO JOIN TB_CAR_INFO USING(CAR_NO) WHERE CAR_NO = ? AND RETURN_DATE >= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RENT_DATE <= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RESERVATION_STATUS  IN ('1','2')
+selectCarListRv=SELECT COUNT(*) CNT FROM TB_RESERVATIONINFO JOIN TB_CAR_INFO USING(CAR_NO) WHERE CAR_NO = ? AND RETURN_DATE >= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND RENT_DATE <= TO_DATE(?, 'YYYY-MM-DD HH24:MI:SS') AND BRANCH_RESERVATION_NO = 1 AND RESERVATION_STATUS  IN ('1','2')
 insertReservation=INSERT INTO TB_RESERVATIONINFO VALUES (SEQ_RESERVATION_NO.NEXTVAL,?,?,?,?,?,?,?,?,?,?,?,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT,DEFAULT,?,?,?,?,?)
 
 wholeList=SELECT MEMBER_NAME, RESERVATION_NO, CAR_NAME, CAR_NO, RENT_DATE, RETURN_DATE FROM TB_USERINFO JOIN TB_RESERVATIONINFO USING(MEMBER_NO) JOIN TB_CAR_INFO USING(CAR_NO) WHERE RESERVATION_STATUS=?
