--- a/bbcProject/src/sql/myInquiry/myInquiry-query.properties
+++ b/bbcProject/src/sql/myInquiry/myInquiry-query.properties
@@ -6,5 +6,8 @@ adminUpdate=UPDATE TB_MY_INQUIRY SET INQUIRY_ANSWER=?, INQUIRY_STATUS=? WHERE IN
 
 
 #=====================================================================user
-UserGetListCount=SELECT COUNT(*) FROM(SELECT INQUIRY_NO,INQUIRY_TITLE,INQUIRY_DATE,INQUIRY_STATUS FROM TB_MY_INQUIRY JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=1 ORDER BY INQUIRY_NO DESC) TB_MY_INQUIRY
-UserSelectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM  (SELECT INQUIRY_NO, INQUIRY_TITLE, INQUIRY_DATE, INQUIRY_STATUS FROM TB_MY_INQUIRY JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=1 ORDER BY INQUIRY_STATUS ASC, INQUIRY_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
+UserGetListCount=SELECT COUNT(*) FROM(SELECT INQUIRY_NO,INQUIRY_TITLE,INQUIRY_DATE,INQUIRY_STATUS FROM TB_MY_INQUIRY JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? ORDER BY INQUIRY_NO DESC) TB_MY_INQUIRY
+UserSelectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM  (SELECT INQUIRY_NO, INQUIRY_TITLE, INQUIRY_DATE, INQUIRY_STATUS FROM TB_MY_INQUIRY JOIN TB_USERINFO USING(MEMBER_NO) WHERE MEMBER_NO=? ORDER BY INQUIRY_STATUS ASC, INQUIRY_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
+UserSelectDetail=SELECT MEMBER_NAME, MEMBER_EMAIL, PHONE, INQUIRY_TITLE,INQUIRY_CONTENT, INQUIRY_DATE,  INQUIRY_ANSWER FROM TB_MY_INQUIRY JOIN TB_USERINFO USING(MEMBER_NO) WHERE INQUIRY_NO=? AND MEMBER_NO=?
+userInfoGetList=SELECT MEMBER_NO,MEMBER_NAME,PHONE,MEMBER_EMAIL FROM TB_USERINFO WHERE MEMBER_NO=?
+insertMyInquiry=INSERT INTO TB_MY_INQUIRY VALUES(SEQ_INQUIRY_NO.NEXTVAL, ? ,? ,SYSDATE,DEFAULT,NULL,DEFAULT,NULL, ?)
