--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -27,7 +27,7 @@ adminUserNoticeDelete=DELETE FROM TB_NOTICE WHERE NOTICE_NO=?
 #===========================================user
 UserSelectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME , NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE  NOTICE_FIELD = 1 ORDER BY NOTICE_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 UserGetListCount=SELECT COUNT(*) FROM TB_NOTICE WHERE NOTICE_FIELD=1
-UserSelectNotice=SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD FROM TB_NOTICE WHERE NOTICE_NO=?
+UserSelectNotice=SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD, (SELECT MAX(P.NOTICE_NO) FROM TB_NOTICE P WHERE P.NOTICE_NO < ?) PREV, (SELECT MIN(P.NOTICE_NO) FROM TB_NOTICE P WHERE P.NOTICE_NO > ?) NEXT FROM TB_NOTICE WHERE NOTICE_NO=?
 UserIncreaseCount=UPDATE TB_NOTICE SET NOTICE_READCNT=NOTICE_READCNT+1 WHERE NOTICE_NO=?
 
 selectByRv=SELECT * FROM(SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE FROM TB_NOTICE ORDER BY NOTICE_DATE DESC) WHERE ROWNUM <= 4
