민진 최종 커밋
마지막

--- a/bbcProject/src/sql/userInfo/userInfo-query.properties
+++ b/bbcProject/src/sql/userInfo/userInfo-query.properties
@@ -9,7 +9,7 @@ adminBlackUpdate=UPDATE TB_USERINFO SET SECESSION=1 WHERE MEMBER_NO=?
 
 #user
 loginUserInfo= SELECT * FROM TB_USERINFO WHERE MEMBER_ID = ? AND MEMBER_PWD = ? AND SECESSION = 1
-insertUser= INSERT INTO TB_USERINFO VALUES(SEQ_MEMBER_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, ?, ?,DEFAULT,DEFAULT,DEFAULT,DEFAULT)
+insertUser= INSERT INTO TB_USERINFO VALUES(SEQ_MEMBER_NO.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, ?, ?,DEFAULT,DEFAULT,1,DEFAULT,DEFAULT)
 viewUserInfo = SELECT MEMBER_ID, MEMBER_NAME, MEMBER_EMAIL,PHONE,MEMBER_ZIPCODE FROM  TB_USERINFO WHERE MEMBER_NO = ?
 selectUser=SELECT * FROM TB_USERINFO WHERE MEMBER_NO = ? AND SECESSION = 1
 updateUser=UPDATE TB_USERINFO SET MEMBER_ID = ?, MEMBER_PWD = ?, MEMBER_NAME = ?, MEMBER_ZIPCODE = ?, MEMBER_ADDRESS = ?, PHONE = ?, MEMBER_EMAIL = ?, GENDER = ? WHERE MEMBER_NO = ?
