민기 - 로그인 -> 통합관리자 연결 재 수정

--- a/bbcProject/src/sql/notice/notice-query.properties
+++ b/bbcProject/src/sql/notice/notice-query.properties
@@ -22,7 +22,7 @@ adminUserAttachment=INSERT INTO TB_ATTACHMENT VALUES(SEQ_FILE_NO.NEXTVAL, ?, ?, 
 adminUserNoticeDetail=SELECT NOTICE_TITLE, NOTICE_CONTENT, NOTICE_DATE, NOTICE_READCNT, NOTICE_FIELD, NOTICE_IMPORT, MEMBER_NAME, FRENAME FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) LEFT JOIN TB_ATTACHMENT USING(NOTICE_NO) WHERE NOTICE_NO=?
 adminUserNoticeUpdate=UPDATE TB_NOTICE SET NOTICE_TITLE=?, NOTICE_CONTENT=?, NOTICE_DATE=SYSDATE, NOTICE_FIELD=?, NOTICE_IMPORT=? WHERE NOTICE_NO=?
 adminUserNoticeDelete=DELETE FROM TB_NOTICE WHERE NOTICE_NO=?
-
+adminMainPageNotice=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM(SELECT NOTICE_NO, NOTICE_TITLE, NOTICE_DATE FROM TB_NOTICE ORDER BY NOTICE_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 
 #===========================================user
 UserSelectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT NOTICE_NO, NOTICE_TITLE, MEMBER_NAME , NOTICE_DATE, NOTICE_READCNT FROM TB_NOTICE JOIN TB_USERINFO USING(MEMBER_NO) WHERE  NOTICE_FIELD = 1 ORDER BY NOTICE_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
